--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,21 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.5",
+        "hammerstone/fast-paginate": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8"
     },
         "require-dev": {
-            "fakerphp/faker": "^1.21",
-            "laravel/pint": "^1.13",
-            "laravel/sail": "^1.29",
-            "mockery/mockery": "^1.6",
-            "nunomaduro/collision": "^8.0",
-            "phpunit/phpunit": "^10.5",
-            "spatie/laravel-ignition": "^2.1"
-        }
+        "barryvdh/laravel-debugbar": "^3.15",
+        "fakerphp/faker": "^1.21",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.29",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^10.5",
+        "spatie/laravel-ignition": "^2.1"
+    }
 ,
     "autoload": {
         "psr-4": {
