--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.343",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.5",
         "hammerstone/fast-paginate": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
         "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
